# nwl-trading-agent

./: Markets in Profile Profiting from the Auction Process (Wiley Trading Book 278) - Notebook.html  marketdata_token.json  pyproject.toml
src/: .env  api_client.py  config.py  data_ingest.py  token_manager.py
tests/: test_api_client.py
